--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@lexical/react": "^0.27.1",
+    "@clerk/nextjs": "^6.12.5",
+    "@clerk/themes": "^2.2.21",
+    "@lexical/react": "^0.27.2",
     "@lexical/rich-text": "^0.27.1",
     "@liveblocks/react-lexical": "^2.20.0",
     "@liveblocks/react-ui": "^2.20.0",
@@ -17,7 +19,7 @@
     "clsx": "^2.1.1",
     "jsme-editor": "^2024.4.29",
     "lucide-react": "^0.479.0",
-    "next": "15.2.2-canary.3",
+    "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
